--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "6projectwordcount",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "type":"module",
+  "bin": "index.js",
+ 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
